# redditbot

./: .coveragerc  .dockerignore  .gitignore  .travis.yml  AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  README.md  bot.py  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  settings.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: push-to-registry.yaml  python-app.yml  release-please.yaml
crawlers/: README.md  bot.py  crawler.py  reddit_crawler.py
crawlers/tests/: conftest.py  test_crawler.py
redditbot/config/: __init__.py
redditbot/crawlers/: reddit_crawler.py
redditbot/crawlers/tests/: conftest.py  test_crawler.py
redditbot/ui/: bot.py  nadaparafazer.py
redditbot/ui/tests/: test_bot.py
strings/: text_slicer.py  texto_exemplo.txt
tests/: conftest.py  test_crawler.py
tests/crawlers/: test_crawler.py
tests/ui/: test_bot.py  test_nadaparafazer.py
ui/: bot.py  nadaparafazer.py
