[tool.poetry]
name = "redditbot"
version = "0.7.4"
description = "Simple bot to get Reddit posts"
authors = ["Lucas <Polo>"]
license = "GPL V3"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.3"
python-telegram-bot = "20.0a4"
click = "^8.1.3"
dynaconf = "^3.1.11"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
flake8-quotes = "^3.3.1"
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
aioresponses = "^0.7.4"
pip-outdated = "^0.5.0"
pytest-asyncio = "^0.19.0"

[tool.pytest.ini_options]
asyncio_mode = 'auto'
addopts = "--cov-report term-missing --cov-report xml"

[tool.coverage.run]
branch = true

[tool.coverage.report]
precision = 2
exclude_lines = ["if __name__ == .__main__.:"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
