[project]
name = "redditbot"
version = "0.7.5"
description = "Simple bot to get Reddit posts"
authors = [{name = "Lucas", email = "polo@example.com"}]
license = {text = "GPL-3.0"}
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot>=21.0",
    "click>=8.1.7",
    "dynaconf>=3.2.3",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "flake8>=7.0.0",
    "flake8-quotes>=3.4.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.32.0",
]

[tool.pytest.ini_options]
asyncio_mode = 'auto'
addopts = "--cov-report term-missing --cov-report xml"

[tool.coverage.run]
branch = true

[tool.coverage.report]
precision = 2
exclude_lines = ["if __name__ == .__main__.:"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
